# chuffed-caching

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-build.yml
chuffed/caching/: hash.h  key-size.h
chuffed/caching/cache/: BoundedCache.h  EventCache.h  EventCache_impl.h  ICache.h  Threshold.h  Threshold_impl.h  UnboundedCache.h
chuffed/caching/cache/events/: CacheEvent.h  CacheEventStore.h
chuffed/caching/cache/policies/: EvictionPolicy.h  FIFO.h  LeastRecentlyUsed.h  RandomReplacement.h
chuffed/caching/keys/: DominancePart.h  EquivalencePart.cpp  EquivalencePart.h  ProjectionKey.h  StateBuilder.cpp  StateBuilder.h  VariableDomain.cpp  VariableDomain.h
chuffed/caching/keys/constraints/: CLinearLE.h  CMinimum.h  DomConstraintKey.h
chuffed/caching/propagators/: BoolEqReif.h  Boolean.h  CachingConstraint.h  DominanceConstraint.h  EquivalenceConstraint.h  Table.h
chuffed/core/: engine.cpp  engine.h  init.cpp  options.cpp  options.h  propagator.h  stats.cpp
chuffed/globals/: alldiff.cpp  linear-bool.cpp  minimum.cpp  table.cpp
chuffed/mip/: mip.h
chuffed/primitives/: arithmetic.cpp  binary.cpp  bool.cpp  element.cpp  linear.cpp
tests/: CMakeLists.txt  doctest.h
tests/caching/: KeySizeTests.cpp
tests/caching/cache/: BoundedCacheTests.cpp  CacheMocks.h  CacheTests.cpp  CacheTests.h  EventCacheTests.cpp  ThresholdTests.cpp  UnboundedCacheTests.cpp  test_events.csv
tests/caching/cache/policies/: FIFOTests.cpp  LeastRecentlyUsedTests.cpp  MockEvictionPolicy.h  RandomReplacementTests.cpp
tests/caching/keys/: DominancePartTests.cpp  EquivalencePartTests.cpp  VariableDomainTests.cpp
tests/caching/keys/constraints/: CLinearLETests.cpp  CMinimumTests.cpp
